# stocks-52week-rank

./: .gitignore  .pre-commit-config.yaml  README.md  brazil_stocks.txt  pyproject.toml  stocks.txt  tox.ini
src/: stocks_52week_rank.py
tests/: test_stock_data_processor.py
