[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks-52week-rank"
description = "A script to rank stocks based on their proximity to the 52-week low."
readme = "README.md"
version = "0.1.0"
authors = [
    { name="Thobias Salazar Trevisan" }
]
license = {file = "LICENSE"}
requires-python = ">=3.6"
keywords = ["stocks", "finance", "yfinance", "pandas", "matplotlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "yfinance",
    "pandas",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/thobiast/stocks-52week-rank"
"Source" = "https://github.com/thobiast/stocks-52week-rank"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
stocks-52week-rank = "stocks_52week_rank:main"
